# tsv

./: .gitignore  CMakeLists.txt  README.markdown  README_TSV.md  main.cpp
ImageComparator/: CMakeLists.txt
ImageComparator/source/: fileSystem.cpp  main.cpp  manipulatePNG.cpp  manipulatePNG.hpp  pseudo-color.cpp  pseudo-color.hpp
MakeRMSEImage/: CMakeLists.txt
MakeRMSEImage/source/: WorkPile.cpp  WorkPile.hpp  fileSystem.hpp  main.cpp  manipulatePNG.cpp  manipulatePNG.hpp  manipulateSPI.cpp  manipulateSPI.hpp  pseudo-color.cpp  pseudo-color.hpp
build2/: CMakeCache.txt  Makefile  SizeChecker  SpectraRmseCalculator  TSVRenderer  cmake_install.cmake
build2/libs/: libReflectCore.0.1.0.dylib  libReflectRenderer.0.1.0.dylib  libZisc.0.5.0.dylib
build2/resource/: qrc_resource.cpp
build2/tsv_test_2024_10_15_16_49_20/: image_data.csv  log.csv
build2/tsv_test_2024_10_15_16_56_43/: image_data.csv  log.csv
build2/tsv_test_2024_10_15_17_11_28/: image_data.csv  log.csv
build_400/: CMakeCache.txt  Makefile  SizeChecker  SpectraRmseCalculator  TSVRenderer  cmake_install.cmake
build_400/f12_regular400_2024_08_18_11_57_55/: image_data.csv  log.csv  scene.refl
build_400/libs/: libReflectCore.0.1.0.dylib  libReflectGui.0.dylib  libReflectRenderer.0.1.0.dylib  libZisc.0.5.0.dylib  libZisc.dylib
build_400/thin_led_regular400_2024_08_28_22_57_58/: image_data.csv  log.csv  scene.refl
build_6/: CMakeCache.txt  Makefile  SizeChecker  SpectraRmseCalculator  TSVRenderer  cmake_install.cmake  inverse_pdf.csv  lights_distribution.csv  x.csv  xyz.csv  y.csv  z.csv
build_6/hp1_light6_1_2024_08_28_18_15_50/: image_data.csv  log.csv  scene.refl
build_6/hp1_light6_2_2024_08_28_19_07_35/: image_data.csv  log.csv  scene.refl
build_6/hp1_random6_1_2024_08_28_21_03_36/: image_data.csv  log.csv  scene.refl
build_6/hp1_random6_2_2024_08_28_21_03_51/: image_data.csv  log.csv  scene.refl
build_6/hp1_tsv6_1_2024_08_28_19_45_34/: image_data.csv  log.csv  scene.refl
build_6/hp1_tsv6_2_2024_08_28_19_46_13/: image_data.csv  log.csv  scene.refl
build_6/libs/: libReflectCore.0.1.0.dylib  libReflectRenderer.0.1.0.dylib  libZisc.0.5.0.dylib
build_6/resource/: qrc_resource.cpp
build_6/thin_d65_light6_2024_08_18_03_52_21/: image_data.csv  log.csv  (+1 more)
build_test/: CMakeCache.txt  Makefile  SizeChecker  SpectraRmseCalculator  TSVRenderer  cmake_install.cmake
build_test_2/: CMakeCache.txt  Makefile  SizeChecker  SpectraRmseCalculator  TSVRenderer  cmake_install.cmake  histgram.py  output.txt  samples.txt  xWavelength.txt  yWavelength.txt  zWavelength.txt
cmake/: FindOpenCL.cmake  compiler.cmake  document.cmake  general.cmake  option.cmake  project.cmake  qt5.cmake
documents/: Doxyfile  Doxyfile.in
source/: main.cpp
test/: size_checker.cpp  size_checker.hpp
ui/: approximate_agglomerative_clustering_bvh_widget.ui  binary_radix_bvh_widget.ui  bvh_optimization_widget.ui  bvh_widget.ui  camera_item_widget.ui  checkerboard_texture_widget.ui  color_palette_widget.ui  color_widget.ui  cosine_weighted_light_widget.ui  group_item_widget.ui  image_texture_widget.ui  layer_widget.ui  main_window.ui  material_item_widget.ui  material_widget.ui  median_split_bvh_widget.ui  multilayer_thin_film_widget.ui  non_bvh_optimization_widget.ui  non_directional_emitter_widget.ui  object_widget.ui  path_tracing_widget.ui  pinhole_camera_widget.ui  probabilistic_ppm.ui  regularized_path_tracing_widget.ui  rendering_method_widget.ui  rgb_palette_widget.ui  rotation_widget.ui  rough_conductor_surface_widget.ui  rough_dielectric_surface_widget.ui  russian_roulette_widget.ui  scaling_widget.ui  single_object_item_widget.ui  smooth_conductor_surface_widget.ui  smooth_dielectric_surface_widget.ui  smooth_diffuse_surface_widget.ui  smooth_plastic_surface_widget.ui  spectrum_palette_widget.ui  system_widget.ui  texture_weight_widget.ui  thin_film_widget.ui  (+5 more)
(+766 files in other folders)
